# GeMU

./: .gitignore  README.md  hmp-commands.hx  meson.build  qemu-options.hx
accel/tcg/: cpu-exec.c  cputlb.c  tb-maint.c  tcg-accel-ops.c  translate-all.c
gemu/: buildnumbers.yml  cJSON.c  callbacks.c  compileSyscallTable.py  dotnet_spector.c  fastcheck.c  gemu.c  generate_symbol_mapping.py  hooks.c  mappedwaitinglist.c  memorymapper.c  meson.build  modules.lst  requirements.txt  symbol_mapping_win10.txt  symbol_mapping_win10_wo_license.txt  symbol_mapping_win7.txt  syscalls_per_os.json  syscalltable.c  syscalltable.json  unpack_multiple_files.py  unpack_single_file.py  unpack_with_recipe.py  utils.c  win_spector.c
gemu/gemuinteractor/: config.py.template  config_parser.py  example.yml  gemu_runner_multiple_files.py  gemu_runner_single_file.py  gemu_runner_with_recipe.py  helpers.py  scheduler.py
gemu/tests/: generate_shellcode.py  injection.c  ntmapviewofsection_injection.c  owninjection.c  owninjectionmemcpy.c  test_gemu.py  writefile.c  writeprocessmemory.c
include/gemu/: callbacks.h  dotnet_spector.h  fastcheck.h  gemu.h  hooks.h  mappedwaitinglist.h  memorymapper.h  peb_teb.h  syscallenums.h  syscalltable.h  utils.h  win_spector.h
include/monitor/: hmp.h
include/qemu/: typedefs.h
monitor/: hmp-cmds.c
pc-bios/: meson.build
pc-bios/keymaps/: meson.build
plugins/: core.c
podman/: Dockerfile  Dockerfile.builder  HOWTOBUILD.md  build.sh  podman_run.sh
softmmu/: runstate.c  vl.c
tcg/i386/: tcg-target.c.inc
tests/plugin/: mem.c
(+7 files in other folders)
